done v1 of data retrieval script

--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -251,11 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Source:** [National Ocean and Atmospheric Administration (NOAA)](https://www.esrl.noaa.gov/gmd/ccgg/trends/data.html)\n",
-    "- **Data URL:** ftp://aftp.cmdl.noaa.gov/products/trends/co2/co2_weekly_mlo.txt\n",
-    "- **Date Accessed:** July 4, 2020\n",
-    "- **Attribution:** Dr. Pieter Tans, [NOAA/GML](www.esrl.noaa.gov/gmd/ccgg/trends/) and Dr. Ralph Keeling, [Scripps Institution of Oceanography](https://scrippsco2.ucsd.edu/).\n",
-    "- **License:**\n",
+    "[None]\n",
     "\n"
    ]
   },
@@ -264,6 +260,13 @@
    "metadata": {},
    "source": [
     "## Processing Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[None]"
    ]
   },
   {
@@ -299,21 +302,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'datasets' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-70-e00535a571cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m \u001b[0mdatasets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'us_vote'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     49\u001b[0m \u001b[0mdatasets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'us_vote'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'compare_hash'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'474fd20770e546b99982923697add9c44409feaf'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0mdatasets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'us_vote'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'retrieve_data'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mretrieve_us_vote\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'datasets' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def retrieve_us_vote():\n",
     "    #scrape the wiki HTML\n",
@@ -363,7 +354,7 @@
     "    return data\n",
     "\n",
     "datasets['us_vote'] = {}\n",
-    "datasets['us_vote']['compare_hash'] = '474fd20770e546b99982923697add9c44409feaf'\n",
+    "datasets['us_vote']['compare_hash'] = 'e11a68359a07461efccbb88f56e79f97e0beaf2b'\n",
     "datasets['us_vote']['retrieve_data'] = retrieve_us_vote\n",
     "\n"
    ]
@@ -402,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 84,
    "metadata": {
     "scrolled": false
    },
@@ -844,16 +835,6 @@
      "output_type": "stream",
      "text": [
       "Validating all datasets\n",
-      "\n",
-      "Processing marketing\n",
-      "Obtaining data from source...\n",
-      "Creating marketing data\n",
-      "Computing hash...\n",
-      "Hash matches for fresh copy of marketing obtained from source\n",
-      "Obtaining data from storage...\n",
-      "Computing hash...\n",
-      "Hash matches for storage copy of marketing\n",
-      "\n",
       "\n",
       "Processing state_property_vote\n",
       "Obtaining data from source...\n",
@@ -866,6 +847,19 @@
       "Hash mismatch for stored copy of state_property_vote\n",
       "Either update the hash in this notebook to the stored file hash: 5a69756420e8766978a7951e1a36e10f27a1dad2\n",
       "Or investigate why the data appears to have changed.\n",
+      "\n",
+      "\n",
+      "Processing us_vote\n",
+      "Obtaining data from source...\n",
+      "Computing hash...\n",
+      "Hash mismatch for fresh copy of us_vote; source changed.\n",
+      "Original Hash: 474fd20770e546b99982923697add9c44409feaf\n",
+      "New Hash: e11a68359a07461efccbb88f56e79f97e0beaf2b\n",
+      "Saving new cleaned data in us_vote_new.csv\n",
+      "If you want to use the new data, remove the old data and rename that file to us_vote.csv\n",
+      "Then update the hash in this notebook for us_vote to e11a68359a07461efccbb88f56e79f97e0beaf2b\n",
+      "Obtaining data from storage...\n",
+      "Cannot load us_vote from storage. Check that the file exists.\n",
       "\n",
       "\n",
       "Processing mtcars\n",
@@ -937,6 +931,16 @@
       "Computing hash...\n",
       "Hash matches for storage copy of sacramento\n",
       "\n",
+      "\n",
+      "Processing marketing\n",
+      "Obtaining data from source...\n",
+      "Creating marketing data\n",
+      "Computing hash...\n",
+      "Hash matches for fresh copy of marketing obtained from source\n",
+      "Obtaining data from storage...\n",
+      "Computing hash...\n",
+      "Hash matches for storage copy of marketing\n",
+      "\n",
       "\n"
      ]
     }
@@ -980,6 +984,13 @@
     "        print('Cannot load ' + dnm + ' from storage. Check that the file exists.')   \n",
     "    print('\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
