--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -67,31 +67,14 @@ promotions to improve our business in a data-driven way.
 
 ```{r 10-toy-example-data, echo = FALSE, message = FALSE, warning = FALSE}
 library(tidyverse)
-data <- tibble(loyalty = c(7, 7.5, 8, 7, 3, 1, 8, 4, 2, 7, 6, 7, 6, 5, 9, 7, 9, 5, 2),
-               csat = c(1, 1, 2, 2, 2, 3, 3, 4, 4, 6, 6, 7, 7, 7, 8, 8, 9, 9, 3),
-               cluster = c("1",
-                           "1",
-                           "1",
-                           "1",
-                           "3",
-                           "3",
-                           "1",
-                           "3",
-                           "3",
-                           "2",
-                           "2",
-                           "2",
-                           "2",
-                           "2",
-                           "2",
-                           "2",
-                           "2",
-                           "2", 
-                           "3"))
+data <- read_csv('data/marketing.csv') %>%
+	 mutate(cluster=as_factor(cluster))
 marketing_data <- data[,1:2]
 ```
+
 ```{r 10-clustering}
 head(marketing_data)
+```
 
 ```{r 10-toy-example-plot, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Modified from http://www.segmentationstudyguide.com/using-cluster-analysis-for-market-segmentation/"}
 base <- ggplot(data, aes(y = loyalty, x = csat)) +
@@ -145,9 +128,10 @@ or business strategies based on this information.
 
 ```{r 10-toy-example-clus1, echo = FALSE, message = FALSE, warning = FALSE}
 library(tidyverse)
-clus1 <- tibble(loyalty = c(7, 7.5, 8, 7, 8),
-               csat = c(1, 1, 2, 2, 3),
-               )
+#clus1 <- tibble(loyalty = c(7, 7.5, 8, 7, 8),
+#               csat = c(1, 1, 2, 2, 3),
+#               )
+clus1 <- head(marketing_data, 5)
 #clus1_center <- clus1 %>% summarize(csat = mean(csat), loyalty = mean(loyalty))
 ```
 
@@ -223,7 +207,7 @@ For example, in the customer data example from earlier, our initialization might
 <center>
 ```{r 10-toy-kmeans-init, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Random initialization of labels."}
 library(gridExtra)
-set.seed(2)
+set.seed(16)
 marketing_data["label"] = factor(sample(1:3, nrow(marketing_data), replace=T))
 
 plt_lbl <- ggplot(marketing_data, aes(y = loyalty, x = csat, colour=label)) +
