--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -67,9 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "R[write to console]: Loading required package: lattice\n",
+      "\n",
+      "R[write to console]: Loading required package: ggplot2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np                #for manipulating arrays\n",
     "import pandas as pd               #for loading/writing/manipulating tabular data\n",
@@ -91,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,19 +791,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "marketing_data = '''\n",
-    "loyalty,csat,cluster\n",
+    "marketing_data = '''loyalty,csat,cluster\n",
     "7,1,1\n",
     "7.5,1,1\n",
     "8,2,1\n",
     "7,2,1\n",
+    "8,3,1\n",
     "3,2,3\n",
     "1,3,3\n",
-    "8,3,1\n",
     "4,4,3\n",
     "2,4,3\n",
     "7,6,2\n",
@@ -805,14 +815,14 @@
     "9,9,2\n",
     "5,9,2\n",
     "2,3,3\n",
-    "'''.strip('\\n')\n",
+    "'''\n",
     "\n",
     "def retrieve_marketing():\n",
     "    print('Creating marketing data')\n",
     "    return marketing_data\n",
     "\n",
     "datasets['marketing'] = {}\n",
-    "datasets['marketing']['compare_hash'] = '8b8c295a9d3d1ffe32cbbbd80c8f5b8e42ab92b2'\n",
+    "datasets['marketing']['compare_hash'] = '9b49d36e53fd474bb7ca04b879a5219f41589c37'\n",
     "datasets['marketing']['retrieve_data'] = retrieve_marketing"
    ]
   },
@@ -825,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -847,19 +857,16 @@
       "Hash mismatch for stored copy of state_property_vote\n",
       "Either update the hash in this notebook to the stored file hash: 5a69756420e8766978a7951e1a36e10f27a1dad2\n",
       "Or investigate why the data appears to have changed.\n",
+      "Saving new data to state_property_vote_new.csv for comparison\n",
       "\n",
       "\n",
       "Processing us_vote\n",
       "Obtaining data from source...\n",
       "Computing hash...\n",
-      "Hash mismatch for fresh copy of us_vote; source changed.\n",
-      "Original Hash: 474fd20770e546b99982923697add9c44409feaf\n",
-      "New Hash: e11a68359a07461efccbb88f56e79f97e0beaf2b\n",
-      "Saving new cleaned data in us_vote_new.csv\n",
-      "If you want to use the new data, remove the old data and rename that file to us_vote.csv\n",
-      "Then update the hash in this notebook for us_vote to e11a68359a07461efccbb88f56e79f97e0beaf2b\n",
+      "Hash matches for fresh copy of us_vote obtained from source\n",
       "Obtaining data from storage...\n",
-      "Cannot load us_vote from storage. Check that the file exists.\n",
+      "Computing hash...\n",
+      "Hash matches for storage copy of us_vote\n",
       "\n",
       "\n",
       "Processing mtcars\n",
@@ -951,9 +958,9 @@
     "    #Obtain data from source and verify the hash matches\n",
     "    print('Processing '+ dnm)\n",
     "    print('Obtaining data from source...')\n",
-    "    data = ddict['retrieve_data']()    \n",
+    "    new_data = ddict['retrieve_data']()    \n",
     "    print('Computing hash...')\n",
-    "    dhash = hash_data(data)\n",
+    "    dhash = hash_data(new_data)\n",
     "    if dhash == ddict['compare_hash']:\n",
     "        print('Hash matches for fresh copy of ' + dnm + ' obtained from source')\n",
     "    else:\n",
@@ -964,33 +971,30 @@
     "        print('If you want to use the new data, remove the old data and rename that file to ' + dnm+'.csv')\n",
     "        print('Then update the hash in this notebook for ' + dnm + ' to ' + dhash)\n",
     "        f = open(dnm+'_new.csv', 'w')\n",
-    "        f.write(data)\n",
+    "        f.write(new_data)\n",
     "        f.close()\n",
     "    #Obtain data from storage and verify the hash matches\n",
     "    print('Obtaining data from storage...')\n",
     "    try:\n",
     "        f = open(dnm+'.csv', 'r')\n",
-    "        data = f.read()\n",
+    "        old_data = f.read()\n",
     "        f.close()  \n",
     "        print('Computing hash...')\n",
-    "        dhash = hash_data(data)\n",
+    "        dhash = hash_data(old_data)\n",
     "        if dhash == ddict['compare_hash']:\n",
     "            print('Hash matches for storage copy of ' + dnm)\n",
     "        else:\n",
     "            print('Hash mismatch for stored copy of ' + dnm)\n",
     "            print('Either update the hash in this notebook to the stored file hash: ' + dhash)\n",
     "            print('Or investigate why the data appears to have changed.')\n",
+    "            print('Saving new data to ' + dnm+'_new.csv for comparison')\n",
+    "            f = open(dnm+'_new.csv', 'w')\n",
+    "            f.write(new_data)\n",
+    "            f.close()\n",
     "    except:\n",
     "        print('Cannot load ' + dnm + ' from storage. Check that the file exists.')   \n",
     "    print('\\n')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
