fixed mauna loa data for chp 3, updated data retrieval

--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -436,7 +436,7 @@
    "source": [
     "- **Source:** [National Ocean and Atmospheric Administration (NOAA)](https://www.esrl.noaa.gov/gmd/ccgg/trends/data.html)\n",
     "- **Data URL:** ftp://aftp.cmdl.noaa.gov/products/trends/co2/co2_weekly_mlo.txt\n",
-    "- **Date Accessed:** July 4, 2020\n",
+    "- **Date Accessed:** July 7, 2020\n",
     "- **Attribution:** Dr. Pieter Tans, [NOAA/GML](www.esrl.noaa.gov/gmd/ccgg/trends/) and Dr. Ralph Keeling, [Scripps Institution of Oceanography](https://scrippsco2.ucsd.edu/).\n",
     "- **License:**\n",
     "\n",
@@ -500,22 +500,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def retrieve_mauna_loa():\n",
-    "    data = download_ftp('aftp.cmdl.noaa.gov', 'products/trends/co2/', 'co2_weekly_mlo.txt')\n",
+    "    data = download_ftp('aftp.cmdl.noaa.gov', 'products/trends/co2/', 'co2_mm_mlo.txt')\n",
     "    # remove the lines beginning with # (these are for meta information)\n",
     "    no_meta_info = [s for s in data.split('\\n') if s[0] != '#']\n",
-    "    # replace all whitespace with a single space, strip from beginning and end, keep only first 5 cols\n",
-    "    standardized_whitespace = [', '.join([num for num in s.strip().split(' ') if len(num)>0][:5]) for s in no_meta_info]\n",
+    "    # replace all whitespace with a single space, strip from beginning and end, keep only first 4 cols\n",
+    "    standardized_whitespace = [','.join([num for num in s.strip().split(' ') if len(num)>0][:4]) for s in no_meta_info]\n",
     "    # stitch together into a string with col names at the head\n",
-    "    clean_data = 'year, month, day, date_decimal, ppm\\n'+'\\n'.join(standardized_whitespace)\n",
+    "    clean_data = 'year,month,date_decimal,ppm\\n'+'\\n'.join(standardized_whitespace)\n",
     "    return clean_data\n",
     "\n",
     "datasets['mauna_loa'] = {}\n",
-    "datasets['mauna_loa']['compare_hash'] = 'bd227e65ce7e568f7cb93cb62320b70f7c7dc9d2'\n",
+    "datasets['mauna_loa']['compare_hash'] = '0a4ee4c99c009424d65ebeeef747ffebd4a8557d'\n",
     "datasets['mauna_loa']['retrieve_data'] = retrieve_mauna_loa\n"
    ]
   },
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -881,12 +881,15 @@
       "\n",
       "Processing mauna_loa\n",
       "Obtaining data from source...\n",
-      "Downloading co2_weekly_mlo.txt from aftp.cmdl.noaa.gov\n",
+      "Downloading co2_mm_mlo.txt from aftp.cmdl.noaa.gov\n",
       "Computing hash...\n",
       "Hash matches for fresh copy of mauna_loa obtained from source\n",
       "Obtaining data from storage...\n",
       "Computing hash...\n",
-      "Hash matches for storage copy of mauna_loa\n",
+      "Hash mismatch for stored copy of mauna_loa\n",
+      "Either update the hash in this notebook to the stored file hash: d8a70c73ab37f74407358b7dd5216f8b416e69a5\n",
+      "Or investigate why the data appears to have changed.\n",
+      "Saving new data to mauna_loa_new.csv for comparison\n",
       "\n",
       "\n",
       "Processing islands\n",
@@ -995,6 +998,13 @@
     "        print('Cannot load ' + dnm + ' from storage. Check that the file exists.')   \n",
     "    print('\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
