fixed chap 6 and wdbc data

--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,17 +700,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def retrieve_wdbc():\n",
+    "def retrieve_unscaled_wdbc():\n",
     "    data = download_http('https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data')\n",
     "    #create list of variable names\n",
-    "    names = ['Class', 'Radius', 'Texture', 'Perimeter', 'Area', 'Smoothness', 'Compactness', 'Concavity', 'Concave Points', 'Symmetry', 'Fractal Dimension']\n",
+    "    names = ['ID', 'Class', 'Radius', 'Texture', 'Perimeter', 'Area', 'Smoothness', 'Compactness', 'Concavity', 'Concave_Points', 'Symmetry', 'Fractal_Dimension']\n",
     "    #remove all but the class label (B/M) and first 10 entries (means of each value)\n",
-    "    data_lines = [line.split(',')[1:12] for line in data.split('\\n')]\n",
+    "    data_lines = [line.split(',')[:12] for line in data.split('\\n')]\n",
     "    clean_data = ','.join(names) + '\\n' + '\\n'.join([','.join(line) for line in data_lines])\n",
     "    return clean_data\n",
+    "\n",
+    "datasets['unscaled_wdbc'] = {}\n",
+    "datasets['unscaled_wdbc']['compare_hash'] = '57dd9bb52f8c5e9f1aa831de7ce199e7a97dffda'\n",
+    "datasets['unscaled_wdbc']['retrieve_data'] = retrieve_unscaled_wdbc\n",
+    "\n",
+    "def retrieve_wdbc():\n",
+    "    data = retrieve_unscaled_wdbc()\n",
+    "    tbl = pd.read_csv(io.StringIO(data))\n",
+    "    sel = (tbl.columns != 'ID') & (tbl.columns != 'Class')\n",
+    "    tbl.loc[:,sel] = (tbl.loc[:,sel] - tbl.loc[:,sel].mean())/tbl.loc[:,sel].std()\n",
+    "    out = io.StringIO()\n",
+    "    tbl.to_csv(out, index=False)\n",
+    "    return out.getvalue()\n",
     "    \n",
     "datasets['wdbc'] = {}\n",
-    "datasets['wdbc']['compare_hash'] = '12bb46844e96b682b15f710dcc081a0c4565cf89'\n",
+    "datasets['wdbc']['compare_hash'] = '5529b157e36fec8d5f688ed8c87c0f2c13bb7dcf'\n",
     "datasets['wdbc']['retrieve_data'] = retrieve_wdbc"
    ]
   },
@@ -835,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -886,10 +899,7 @@
       "Hash matches for fresh copy of mauna_loa obtained from source\n",
       "Obtaining data from storage...\n",
       "Computing hash...\n",
-      "Hash mismatch for stored copy of mauna_loa\n",
-      "Either update the hash in this notebook to the stored file hash: d8a70c73ab37f74407358b7dd5216f8b416e69a5\n",
-      "Or investigate why the data appears to have changed.\n",
-      "Saving new data to mauna_loa_new.csv for comparison\n",
+      "Hash matches for storage copy of mauna_loa\n",
       "\n",
       "\n",
       "Processing islands\n",
@@ -920,6 +930,16 @@
       "Obtaining data from storage...\n",
       "Computing hash...\n",
       "Hash matches for storage copy of michelson\n",
+      "\n",
+      "\n",
+      "Processing unscaled_wdbc\n",
+      "Obtaining data from source...\n",
+      "Downloading from https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data\n",
+      "Computing hash...\n",
+      "Hash matches for fresh copy of unscaled_wdbc obtained from source\n",
+      "Obtaining data from storage...\n",
+      "Computing hash...\n",
+      "Hash matches for storage copy of unscaled_wdbc\n",
       "\n",
       "\n",
       "Processing wdbc\n",
@@ -998,13 +1018,6 @@
     "        print('Cannot load ' + dnm + ' from storage. Check that the file exists.')   \n",
     "    print('\\n')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
