edited index chp 1 post-data repro

--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -194,8 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "def retrieve_state_property_vote():\n",
@@ -205,10 +207,20 @@
     "    #create the query URL\n",
     "    state_data_url = \"http://datausa.io/api/data?drilldowns=State&measure=Average Commute Time,Property Value,Median Household Income,Population&year=2016\"\n",
     "    state_data = requests.get(state_data_url, headers=useragent).json()['data']\n",
+    "    #for some reason, DataUSA API does not return Median Household Income for Puerto Rico or DC\n",
+    "    #insert it manually based on their website\n",
+    "    for state in state_data:\n",
+    "        if state['State'] == 'Puerto Rico':\n",
+    "            state['Median Household Income'] = 20078\n",
+    "        if state['State'] == 'District of Columbia':\n",
+    "            state['Median Household Income'] = 75506\n",
+    "    #for some reason, DataUSA API\n",
     "    #convert to a list of lists, removing DC, Puerto Rico\n",
     "    #format numerical entries as either a 2-decimal float or integer\n",
     "    colnames = ['State', 'Population', 'Property Value', 'Median Household Income', 'Average Commute Time']\n",
-    "    datalines = [[d[colname] if type(d[colname]) == str else format(d[colname], '.2f').rstrip('0').rstrip('.') for colname in colnames] for d in state_data if d['State'] != 'Puerto Rico' and d['State'] != 'District of Columbia']\n",
+    "    datalines = [[d[colname] if type(d[colname]) == str else format(d[colname], '.2f').rstrip('0').rstrip('.') for colname in colnames] for d in state_data] # if d['State'] != 'Puerto Rico' and d['State'] != 'District of Columbia']\n",
+    "    #rename column names to shorten and avoid spaces\n",
+    "    colnames = ['state', 'pop', 'med_prop_val', 'med_income', 'avg_commute']\n",
     "    #obtain general presidential election 2016 results data\n",
     "    print('Downloading 2016 vote data from http://www.fec.gov')\n",
     "    elec_data_url = \"https://www.fec.gov/documents/1890/federalelections2016.xlsx\"\n",
@@ -217,11 +229,11 @@
     "    #extract one row per state with winner\n",
     "    elec_data = elec_data[elec_data['WINNER INDICATOR'] == 'W']\n",
     "    elec_dict = {}\n",
-    "    for i in range(elec_data.shape[0]):\n",
+    "    for i in range(elec_data.shape[0]):        \n",
     "        party = elec_data.iloc[i]['PARTY']\n",
     "        #some rows assign the \"winner\" to combined parties; check the winner name for these rows\n",
     "        #otherwise convert DEM/REP to long form names\n",
-    "        if party == 'Combined Parties:':\n",
+    "        if party != 'REP' and party != 'DEM': \n",
     "            if elec_data.iloc[i]['LAST NAME'] == 'Trump':\n",
     "                party = 'Republican'\n",
     "            else:\n",
@@ -232,14 +244,13 @@
     "            party = 'Democratic'\n",
     "        elec_dict[elec_data.iloc[i]['STATE']] = party\n",
     "    #combine the two data\n",
-    "    data = [','.join(colnames+['Party'])]\n",
+    "    data = [','.join(colnames+['party'])]\n",
     "    for line in datalines:\n",
-    "        data.append(','.join(line)+',' + elec_dict[line[0]])\n",
+    "        data.append(','.join(line)+',' + (elec_dict[line[0]] if line[0] in elec_dict.keys() else \"Not Applicable\"))\n",
     "    return '\\n'.join(data)\n",
-    "    \n",
     "\n",
     "datasets['state_property_vote'] = {}\n",
-    "datasets['state_property_vote']['compare_hash'] = '1adca21b3d53c2d6e159d52c8bff65f66ea02af6'\n",
+    "datasets['state_property_vote']['compare_hash'] = 'f703237fb2da402e9d945de1e76783d014b60cfe'\n",
     "datasets['state_property_vote']['retrieve_data'] = retrieve_state_property_vote\n",
     "        "
    ]
@@ -848,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
@@ -867,10 +878,7 @@
       "Hash matches for fresh copy of state_property_vote obtained from source\n",
       "Obtaining data from storage...\n",
       "Computing hash...\n",
-      "Hash mismatch for stored copy of state_property_vote\n",
-      "Either update the hash in this notebook to the stored file hash: 5a69756420e8766978a7951e1a36e10f27a1dad2\n",
-      "Or investigate why the data appears to have changed.\n",
-      "Saving new data to state_property_vote_new.csv for comparison\n",
+      "Hash matches for storage copy of state_property_vote\n",
       "\n",
       "\n",
       "Processing us_vote\n",
@@ -1018,6 +1026,13 @@
     "        print('Cannot load ' + dnm + ' from storage. Check that the file exists.')   \n",
     "    print('\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
