editing reading chapter post data repro; removed can movies DB from data repro script

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -425,8 +425,8 @@ so that we can share it with others or use it for another step in the analysis. 
 The default arguments for this file are to use a comma (`,`) as the delimiter and include column names. Below we demonstrate creating a new version of the US state-level 
 property, income, population and voting data from 2015 and 2016 that does not contain the territory of Puerto Rico, and then writing this to a `.csv` file:
 
-```{r}
-state_data <- filter(us_data, state != "PR")
+```
+state_data <- filter(us_data, state != "Puerto Rico")
 write_csv(state_data, "data/us_states_only.csv")
 ```
 
