--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -182,7 +182,8 @@
     "You can copy, download or print content for your own use, and you can also include excerpts from Data USA, databases and multimedia products in your own documents, presentations, blogs, websites and teaching materials, provided that suitable acknowledgment of Data USA as source is given.\n",
     "\n",
     "All requests for commercial use and translation rights should be submitted to usage@datausa.io.\n",
-    "```"
+    "```\n",
+    "- **Further Instructions:** You must run `Rscript create_state_property_vote_variants.R` in this folder to generate the non-csv versions of the data. These are used in the reading data chapter."
    ]
   },
   {
@@ -253,42 +254,6 @@
     "datasets['state_property_vote']['compare_hash'] = 'f703237fb2da402e9d945de1e76783d014b60cfe'\n",
     "datasets['state_property_vote']['retrieve_data'] = retrieve_state_property_vote\n",
     "        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Canadian Movies Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Meta-info"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[None]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Processing Code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[None]"
    ]
   },
   {
